# ghcrypt

./: README.rst  cryptic.ini  ghcrypt.ini  requirements.txt  setup.cfg
cryptic/: cryptic_main.py
ghcrypt/: ghcrypt_main.py
