[metadata]
name = ghcrypt
summary = Encrypt things for others using github keys.
description-file = README.rst
license = MIT
author = Joshua Harlow
author-email = harlowja@gmail.com
home-page = https://github.com/harlowja/cryptic

[files]
packages =
    ghcrypt

[entry_points]
console_scripts =
    ghcrypt = ghcrypt.ghcrypt_main:main
